--- a/src/Avalonia.Stories.Demo/MainWindow.axaml
+++ b/src/Avalonia.Stories.Demo/MainWindow.axaml
@@ -11,6 +11,7 @@
         <demo:MainViewModel/>
     </Window.DataContext>
     <views:StoriesView
-        x:Name="stories" 
+        x:Name="stories1" 
+        IsStarted="True"
         DataContext="{Binding}"/>
 </Window>
