added description visible property

--- a/src/Avalonia.Stories.Demo/MainWindow.axaml
+++ b/src/Avalonia.Stories.Demo/MainWindow.axaml
@@ -11,6 +11,8 @@
         <demo:MainViewModel/>
     </Window.DataContext>
     <views:StoriesView
+        DurationSeconds="10"
+        IsDescriptionVisible="True"
         x:Name="stories1" 
         IsStarted="True"
         DataContext="{Binding}"/>
